[package]
name = "dank_memer_crypto"
version = "0.1.0"
authors = ["Luke James <me@lukej.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.2"
hex = "0.3.1"
strum = "0.20"
strum_macros = "0.20"
rand = "0.7.3"